# bigwig_compressor

./: .gitignore  README.md  analysis.ipynb  attenuate_rna_bigwig.py  pyproject.toml  requirements.txt  setup.py
.mplconfig/: fontlist-v390.json
